test/logicShortCircuit5.slq
// args: --run

def main(){
	return false || assert(false); // error
}
